2018-04-05  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
	Support <attach/> and <file/> parameters.

	* src/main/java/ball/maven/plugins/artifact/AbstractArtifactMojo.java:
	Implement AttachedArtifact and use AttachedArtifact as parameter
	for convenience methods.

	* src/main/java/ball/maven/plugins/artifact/AttachedArtifact.java:
	Changed to an interface.

2018-04-02  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
	Initial writing.

2018-04-01  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/maven/plugins/artifact/ArtifactAttachMojo.java:
	Support <type/>, <classifier/>, and <file/> parameters.

	* src/main/java/ball/maven/plugins/artifact/ArtifactMainMojo.java:
	Changed name of goal from "set" to "main".

2018-03-31  Allen D. Ball  <ball@sol.local>

	* Initial writing.
