@@ -1,3 +1,9 @@
+2019-08-20  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/ball/maven/plugins/artifact/AbstractArtifactMojo.java,
+	src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
+	Stop using deprecated APIs.
+
 2018-04-05  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/ball/maven/plugins/artifact/ArtifactDownloadMojo.java:
